syntax = "proto3";

message SetPlayerDetailsMessage {
  string name = 1;
  repeated string characterLayers = 2;
}
